--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <link rel="icon" href="/favicon.png" />
+
     <title>Headless WerdPress</title>
+
+    <link rel="stylesheet" href="/style.css" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
   </head>
